--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wargrowth Agency - Growth & UI/UX</title>
-
+    <meta
+      name="google-site-verification"
+      content="vhJ62ScmUEL83b_9b9DRETWgKYeYDoMm7odJOkKw-HU"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap"
