--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     />
 
     <!-- Custom Global Styles -->
-    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="/src/styles/global.css" />
 
     <!-- Google Tag Manager -->
-    <script src="scripts/gtm.js"></script>
+    <script src="src/scripts/gtm.js"></script>
     <!-- End Google Tag Manager -->
 
     <!-- Polyfill for process.env -->
